[package]
name = "ghosty-tui"
version = "0.1.0"
edition = "2021"
description = "TUI mínimo para chatear con un agente rust-ghosty (easybits) por SSE"
license = "MIT"
repository = "https://github.com/blissito/ghosty-tui"
readme = "README.md"
keywords = ["tui", "ratatui", "agent", "sse", "easybits"]
categories = ["command-line-utilities"]

[[bin]]
name = "ghosty"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = "0.3"
serde_json = "1"
anyhow = "1"
